<resources>
    <string name="app_name">FoundIt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="button">Button</string>
    <string name="title_activity_lost_item_browse">LostItemBrowseActivity</string>
    <string name="tvw1">TextView</string>
    <string name="tvw2">TextView</string>
    <string name="title">Title</string>
    <string name="description">Description</string>


    <!--Lost Form Prompts-->
    <string name="name_prompt">Name</string>
    <string name="phone_prompt">Phone number</string>
    <string name="email_prompt">Email</string>
    <string name="type_prompt">Property Type</string>
    <string name="make_prompt">Make</string>
    <string name="model_prompt">Model</string>
    <string name="color_prompt">Color</string>
    <string name="id_prompt">Serial or ID Number</string>
    <string name="device_number_prompt">Phone Number of Lost Device</string>
    <string name="location_prompt">Location Property Was Lost</string>
    <string name="date_prompt">Date Property Was Lost</string>
    <string name="description_prompt">Further Description of Lost Property</string>
    <string name="title_activity_report_lost">ReportLost</string>


</resources>
