<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.julia.foundit.ReportLostActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_prompt" />

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_prompt" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_prompt" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/make_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_prompt" />

            <EditText
                android:id="@+id/make_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/model_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model_prompt" />

            <EditText
                android:id="@+id/model_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/color_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_prompt" />

            <EditText
                android:id="@+id/color_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/ID_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_prompt" />

            <EditText
                android:id="@+id/ID_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/device_phone_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_number_prompt" />

            <EditText
                android:id="@+id/device_phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/location_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_prompt" />

            <EditText
                android:id="@+id/location_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_prompt" />

            <EditText
                android:id="@+id/description_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/submit_report_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Report Lost Item"
                tools:layout_editor_absoluteX="253dp"
                tools:layout_editor_absoluteY="16dp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>